Bug 70813 - Bad alphabet sort of list of macros
Summary: Bad alphabet sort of list of macros
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.0.5.2 release
Hardware: x86 (IA32) Windows (All)
: medium normal
Assignee: Andreas Heinisch
URL:
Whiteboard: target:6.4.0
Keywords:
Depends on:
Blocks: Dialog Macro-UI
  Show dependency treegraph
 
Reported: 2013-10-23 20:27 UTC by Zoltán Hegedüs
Modified: 2020-07-13 14:31 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
LibreOffice Basic macros (UTF-8 with UTF-8 header) (72.36 KB, text/plain)
2013-10-23 20:27 UTC, Zoltán Hegedüs
Details
How to search macros in this "random" ordered list? (140.04 KB, image/png)
2014-11-12 16:14 UTC, ungifted
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Zoltán Hegedüs 2013-10-23 20:27:18 UTC
Created attachment 88054 [details]
LibreOffice Basic macros (UTF-8 with UTF-8 header)

Menu Tools - Macros - Organize Macros - LibreOffice Basic: My macros - Standard - Module1: Edit: save the original (Ctrl+A, Ctrl+C, insert an empty .txt file and save in UTF-8 format with header/signature), after it, delete with Ctrl+A, delete key. Open the attachment macros.txt, select and copy with Ctrl+A, Ctrl+C, and insert to My macros window with Ctrl+V, and save with Ctrl+S. You may close this.
All macros puts a special character.
Menu Tools - Customize: Keyboard, Category, LibreOffice Macros, user, Standard, Module 1. See the list "Functions". The most of the functions is in alphabet order, but the functions with name Uxxxx (x is a hexadecimal digit) is not, only approximately.
After this, you may restore your own macros.
Comment 1 immanuelg 2014-07-27 20:21:29 UTC
I cannot follow the steps provided.
Please provide more information or a screenshot of the bug.
Comment 2 Urmas 2014-07-27 22:18:10 UTC
Confirmed in master.
There is a bunch of "U25xx" coming between "U21xx".
Comment 3 ungifted 2014-11-12 16:14:18 UTC
Created attachment 109357 [details]
How to search macros in this "random" ordered list?

It seems order from macro sourcecode, as is.
How to search something in this listings of function names? :)
Here it looks like really randomly ordered :)
LO 4.3
Comment 4 QA Administrators 2015-12-20 16:05:45 UTC Comment hidden (obsolete)
Comment 5 QA Administrators 2017-01-03 19:45:58 UTC Comment hidden (obsolete)
Comment 6 Thomas Lendo 2019-07-07 18:15:54 UTC
Still valid.

Version: 6.3.0.0.beta1
Build ID: a187af327633f5f00363be5131bd21a13e0f1a7b
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: de-AT (de_AT.UTF-8); UI-Language: en-US
Comment 7 Commit Notification 2019-07-31 13:19:21 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/1dd8cde5cd2e692a442b6885c59634fba3737284%5E%21

tdf#70813 Sorted list of macros in macro dialog

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.