tdf#70813 Sorted list of macros in macro dialog

Change-Id: Ibb488b2252a2eea001f1f00aacc4060e365e0df0
Reviewed-on: https://gerrit.libreoffice.org/76739
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>